--- a/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.css
@@ -57,3 +57,12 @@
     .accordion .accordion-item .accordion-header .accordion-button:hover{
       background-color: rgba(251, 10, 26, 0.391);
     }
+
+    .tabla-contenedor-resenias{
+      max-height: 400px; /* Establece la altura máxima que deseas para la tabla */
+      overflow-y: auto; /* Crea una barra de desplazamiento vertical cuando sea necesario */
+     background-color:rgba(240, 248, 255, 0.785);
+     border: 2px dashed black;
+     border-radius: 8px;
+     overflow-y: auto;
+    }
