--- a/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
@@ -1,7 +1,6 @@
 <div class="font-usuario">
 <div class="container-fluid">
     <button (click)="cargarServicios()">eeeeee</button>
-    <button (click)="cargarResenias()">ffffffffff</button>
     <div class="boton my-4 text-end">
         <button type="button" class="btn btn-success fw-bold" (click)="irFormularioServicio()">Agregar Servicio</button>
     </div>
@@ -11,25 +10,8 @@
     <div class="col-lg-3 col-md-3 col-sx-12">
         <div class="accordion" id="accordionExample">
             <div class="accordion-item p-2 todo ">
-                <button class="btn w-100 text-start" >Todas los Usuarios</button> 
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Estado De las Reservas
-                  </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <select class="form-select mt-1 mb-1 mx-1" aria-label="Default select example" id="reservado" name="reservado">
-                      <option disabled>Estado de Reserva</option>
-                      <option value="true">Reservas Confirmadas</option>
-                      <option value="false">Reservas Sin Confirmar</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              
+                <button class="btn w-100 text-start" (click)="cargarServicios()" >Todas Mis Servicios</button> 
+            </div>              
             <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -67,7 +49,7 @@
         
     
     </div>
-    <div *ngIf="hola;else f"  class="tabla-contenedor col-lg-7 col-md-9 col-12">
+    <div class="tabla-contenedor col-lg-7 col-md-9 col-12">
         <table class="table table-hover" >
             <thead>
                 <tr>
@@ -86,8 +68,8 @@
                     <th >{{ser.nombre}}</th>
                     <td>{{ser.categoria}}</td>
                     <td>{{ser.calificacionTotal}}</td>
-                    <td> <button class="btn btn-info" >Ver Reservas</button> </td>
-                    <td> <button class="btn btn-info" >Ver Resenias</button> </td>
+                    <td> <button class="btn btn-info" (click)="cargarReservas(ser._id)">Ver Reservas</button> </td>
+                    <td> <button class="btn btn-info" (click)="cargarResenias(ser._id)">Ver Resenias</button> </td>
                     <td>
                         <button class="btn btn-info mx-1" >Modificar</button>
                         <button class="btn btn-danger mx-1">Dar de Baja</button>
@@ -95,7 +77,50 @@
                 </tr>
             </tbody>
         </table>
-    </div> 
-    <ng-template #f>holassn</ng-template>
+    </div>
+</div><br>
+<div class="row" *ngIf="verResenia">
+<div class="tabla-contenedor-resenias col-6 offset-4">
+  <table class="table table-striped">
+      <thead>
+          <tr>
+              <th scope="col">comentario</th>
+              <th scope="col">Fecha</th>
+          </tr>
+      </thead>
+      <tbody >
+          <tr *ngFor="let resenia of resenias">
+              <th scope="row">{{resenia.comentario}}</th>
+              <td>{{resenia.fechaAlta}}</td>
+          </tr>
+      </tbody>
+  </table>
 </div>
+</div>
+<div class="row" *ngIf="verReserva">
+  <div class="tabla-contenedor-resenias col-8 offset-3">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Nombre Usuario</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">Dni</th>
+                <th scope="col">Fecha de Ingreso</th>
+                <th scope="col">Fecha de Egreso</th>
+                <th scope="col">Precio</th>
+            </tr>
+        </thead>
+        <tbody >
+            <tr *ngFor="let reserva of reservas; let i = index">
+                <td>{{usuarios[i].nombre}}</td>
+                <td>{{usuarios[i].apellido}}</td>
+                <td>{{usuarios[i].dni}}</td>
+                <td>{{reserva.fechaIngreso}}</td>
+                <td>{{reserva.fechaEgreso}}</td>
+                <td>{{reserva.precio | currency}}</td>
+            </tr>
+        </tbody>
+    </table>
+  </div>
+  </div>
 </div>
