--- a/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.html
+++ b/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.html
@@ -1,5 +1,4 @@
-
-
+<div class="fondo-servicio">
 <section>
     <div class="my-4 formulario-gestor">
         <form #servicioForm="ngForm" class="opacidad">
@@ -67,5 +66,4 @@
         </form>
     </div>
 </section>
-
-{{servicio | json}}
+</div>
