--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-lg" *ngIf="loginService.usuarioLoggedIn()">
+<nav class="navbar navbar-dark bg-dark" *ngIf="loginService.usuarioLoggedIn()">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <img src="/assets/logo-turismoapp2.png" class="img-fluid" alt="Sample image" style="width: 50px;">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="bi bi-card-list" style="font-size: 30px;"></i>
         </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" aria-current="page" [routerLink]="['servicio']">SERVICIOS</a>
                 </li>
@@ -16,23 +16,24 @@
                 </li>
 
                 <li class="nav-item dropdown" routerLinkActive="active">
-                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         MI PERFIL
                     </a>
 
-                    <ul class="dropdown-menu dropdown-menu-end">
+                    <ul class="dropdown-menu dropdown-menu-end" style="background: unset;margin-right: 70%;">
                         <li><a class="dropdown-item" [routerLink]="['usuario/datos']">MIS DATOS</a></li>
 
                         <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESERVAS</a></li>
 
                         <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESENIAS</a></li>
 
-                        <li class="dropdown-divider"></li>
 
-                        <li><a class="dropdown-item" [routerLink]="['home']" routerLinkActive="active" (click)="logout()">CERRAR SESION</a></li>
                     </ul>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" aria-current="page" [routerLink]="['home']" routerLinkActive="active"
+                        (click)="logout()">CERRAR SESION</a>
                 </li>
+
             </ul>
         </div>
     </div>
