Changes gestor datos

--- a/frontend/front-tpfinal/src/app/components/roles/gestor-datos/gestor-datos.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor-datos/gestor-datos.component.html
@@ -1,1 +1,59 @@
-<p>gestor-datos works!</p>
+<div class="fondo-usuario">
+    <div class="row">
+        <div class="tabla col-sm-8 offset-sm-2">
+            <div class="title col-12">
+                <strong>
+                    <h3>Mis Datos</h3>
+                </strong>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <label class="label1">Usuario</label><br>
+                    <div class="nombre">
+                        <label for="">{{usuario.username}}</label>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 ">
+                    <label class="label1">Nombre</label><br>
+                    <div class="nombre">
+                        <label for="">{{usuario.nombre}}</label>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <label class="label1">Apellido</label><br>
+                    <div class="nombre">
+                        <label for="">{{usuario.apellido}}</label>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <label class="label1">DNI</label><br>
+                    <div class="nombre">
+                        <label for="">{{usuario.dni}}</label>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <label class="label1">Email</label><br>
+                    <div class="nombre">
+                        <label for="">{{usuario.email}}</label>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <label class="label1">Edad</label><br>
+                    <div class="nombre">
+                        <label for="">{{usuario.edad}}</label>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <label class="label1">Fecha de Nacimient:</label><br>
+                    <div class="nombre">
+                        <label for="">{{usuario.fechaNacimiento}}</label>
+                    </div>
+                </div>
+            </div>
+
+            <button type="button" class="btn btn-primary" routerLink="/usuario-form/1">
+                <i class="fa fa-pencil-square-o" aria-hidden="true"></i> MODIFICAR
+            </button>
+        </div>
+    </div>
+</div>
