Add Printjs en reserva y admin

--- a/frontend/front-tpfinal/src/app/components/home/home.component.html
+++ b/frontend/front-tpfinal/src/app/components/home/home.component.html
@@ -68,7 +68,7 @@
                     </div>
 
                     <div class="col px-2">
-                        <a aria-current="gestorForm" [routerLink]="['/gestor-form']" routerLinkActive="active"
+                        <a aria-current="gestorForm" [routerLink]="['/gestor-form/0']" routerLinkActive="active"
                             data-bs-dismiss="modal">
                             <img src="/assets/fondo-home/icono/icono-gestor.png" alt="Login | Gestor"
                                 class="img-fluid registration-option" />
