--- a/frontend/front-tpfinal/src/app/components/roles/gestor-datos/gestor-datos.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor-datos/gestor-datos.component.html
@@ -10,49 +10,49 @@
                 <div class="col-12 col-md-4">
                     <label class="label1">Usuario</label><br>
                     <div class="nombre">
-                        <label for="">{{usuario.username}}</label>
+                        <label for="">{{gestor.username}}</label>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 ">
                     <label class="label1">Nombre</label><br>
                     <div class="nombre">
-                        <label for="">{{usuario.nombre}}</label>
+                        <label for="">{{gestor.nombre}}</label>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <label class="label1">Apellido</label><br>
                     <div class="nombre">
-                        <label for="">{{usuario.apellido}}</label>
+                        <label for="">{{gestor.apellido}}</label>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <label class="label1">DNI</label><br>
                     <div class="nombre">
-                        <label for="">{{usuario.dni}}</label>
+                        <label for="">{{gestor.dni}}</label>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <label class="label1">Email</label><br>
                     <div class="nombre">
-                        <label for="">{{usuario.email}}</label>
+                        <label for="">{{gestor.email}}</label>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <label class="label1">Edad</label><br>
                     <div class="nombre">
-                        <label for="">{{usuario.edad}}</label>
+                        <label for="">{{gestor.edad}}</label>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <label class="label1">Fecha de Nacimient:</label><br>
+                    <label class="label1">Fecha de Nacimiento</label><br>
                     <div class="nombre">
-                        <label for="">{{usuario.fechaNacimiento}}</label>
+                        <label for="">{{gestor.fechaNacimiento}}</label>
                     </div>
                 </div>
             </div>
 
-            <button type="button" class="btn btn-primary" routerLink="/usuario-form/1">
-                <i class="fa fa-pencil-square-o" aria-hidden="true"></i> MODIFICAR
+            <button type="button" class="btn btn-primary" routerLink="/gestor-form/1">
+                <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Modificar
             </button>
         </div>
     </div>
