--- a/frontend/front-tpfinal/src/app/components/roles/usuario-datos/usuario-datos.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario-datos/usuario-datos.component.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <label class="label1">Fecha de Nacimient:</label><br>
+                    <label class="label1">Fecha de Nacimiento</label><br>
                     <div class="nombre">
                         <label for="">{{usuario.fechaNacimiento}}</label>
                     </div>
