Agregando Filtros al Admin component

--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
@@ -105,7 +105,6 @@
                     <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <select class="form-select mt-1 mb-1 mx-1" aria-label="Default select example" id="reservado" name="reservado" [(ngModel)]="reservado" (ngModelChange)="filtrarReservaPorReservado()">
-                  
                           <option value="true">Reservas Confirmadas</option>
                           <option value="false">Reservas Sin Confirmar</option>
                         </select>
@@ -137,7 +136,7 @@
                     <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                       <div class="accordion-body p-2">
                          <input class="form-control" type="text" name="nombreServicio" id="nombreServicio" [(ngModel)]="nomServicio">
-                         <button *ngIf="nomServicio!=null" class="btn btn-info mt-2 mb-2 w-100" (click)="filtrarPorNombreDeServicio()">Filtrar Por Nombre de servicio</button>
+                         <button *ngIf="nomServicio" class="btn btn-info mt-2 mb-2 w-100" (click)="filtrarPorNombreDeServicio()">Filtrar Por Nombre de servicio</button>
                       </div>
                     </div>
                   </div>
