admin routes / gestor reservas

--- a/frontend/front-tpfinal/src/app/components/roles/admin/admin.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/admin/admin.component.html
@@ -1,61 +1,5 @@
 <div class="container">
-  <div class="row">
-    <div class="tabla col-sm-8 offset-sm-2">
-      <div class="title col-12">
-        <strong>
-          <h3>Mis Datos</h3>
-        </strong>
-      </div>
-      <div class="row">
-        <div class="col-12 col-md-4 ">
-          <label class="label1">Nombre : {{administrador.nombre}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <label class="label1">Apellido : {{administrador.apellido}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <label class="label1">Dni: {{administrador.dni}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <label class="label1">Email: {{administrador.email}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <label class="label1">Edad: {{administrador.edad}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <label class="label1">Fecha de Nacimiento: {{administrador.fechaNacimiento}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <label class="label1">Usuario: {{administrador.username}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <label class="label1">Password: {{administrador.password}}</label><br>
-          <div class="nombre">
-          </div>
-        </div>
-      </div>
-
-      <button type="button" class="btn btn-primary" routerLink="/usuario-form/1">
-        <i class="fa fa-pencil-square-o" aria-hidden="true"></i> MODIFICAR
-      </button>
-    </div>
-  </div>
-
-
+  <h1 style="text-align: center; margin-top: 40px ;">GESTION DEL SISTEMA :</h1>
   <select class="form-select form-select-lg mb-3" style="margin-top: 100px; margin-bottom: 20px;"
     aria-label="Default select example" [(ngModel)]="tablaSeleccionada">
     <option value="gestores">Tabla de Gestores</option>
