--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -8,11 +8,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" aria-current="page" [routerLink]="['servicio']">SERVICIOS</a>
+                    <a class="nav-link"  *ngIf="tipo !== 'admin'" aria-current="page" [routerLink]="['servicio']">SERVICIOS</a>
                 </li>
 
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" aria-current="page">INFORMACION</a>
+                    <a class="nav-link"  *ngIf="tipo !== 'admin'" aria-current="page">INFORMACION</a>
                 </li>
 
                 <li class="nav-item dropdown" routerLinkActive="active">
@@ -21,11 +21,11 @@
                     </a>
 
                     <ul class="dropdown-menu dropdown-menu-end" style="background: unset;margin-right: 70%;">
-                        <li><a class="dropdown-item" [routerLink]="['usuario/datos']">MIS DATOS</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['admin-form/{{id}}']">MIS DATOS</a></li>
 
-                        <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESERVAS</a></li>
+                        <li><a  *ngIf="tipo !== 'admin'" class="dropdown-item" [routerLink]="['usuario']">MIS RESERVAS</a></li>
 
-                        <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESENIAS</a></li>
+                        <li><a *ngIf="tipo !== 'admin'" class="dropdown-item" [routerLink]="['usuario']">MIS RESENIAS</a></li>
 
 
                     </ul>
