--- a/frontend/front-tpfinal/src/app/app.component.html
+++ b/frontend/front-tpfinal/src/app/app.component.html
@@ -1,8 +1,6 @@
-<!--<div *ngIf="logeado">
+<div *ngIf="logeado">
   <app-header></app-header>
-</div>-->
-<app-header></app-header>
-
+</div>
 <!--
 <router-outlet></router-outlet>
 -->
