se sube el arreglo del navbar responsivo

--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark" *ngIf="loginService.usuarioLoggedIn()">
+<nav class="navbar navbar-dark bg-dark navbar-expand-md" *ngIf="loginService.usuarioLoggedIn()">
     <div class="container-fluid">
         <img src="/assets/logo-turismoapp2.png" class="img-fluid" alt="Sample image" style="width: 50px;">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
