--- a/frontend/front-tpfinal/src/app/components/roles/admin/admin.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/admin/admin.component.html
@@ -1,4 +1,7 @@
-<div class="container">
+<div class="container background-container">
+
+  <img src="/assets/fondo-login/login-formulario-gestor.jpg" alt="Fondo" class="background-image">
+
   <h1 style="text-align: center; margin-top: 40px ;">GESTION DEL SISTEMA :</h1>
   <select class="form-select form-select-lg mb-3" style="margin-top: 100px; margin-bottom: 20px;"
     aria-label="Default select example" [(ngModel)]="tablaSeleccionada">
@@ -185,12 +188,11 @@
       </div>
     </div>
 
-
-
-
+    
     <div class="col-lg-9 col-md-9 col-12 ">
+      <div class="table-responsive">
       <!-- Tabla de Gestores -->
-      <table class="table table-striped text-center" *ngIf="tablaSeleccionada === 'gestores'">
+      <table class="table table-striped text-center bg-white" *ngIf="tablaSeleccionada === 'gestores'">
         <thead>
           <tr>
             <th scope="col">Username</th>
@@ -220,9 +222,10 @@
           </tr>
         </tbody>
       </table>
-
+    </div>
+    <div class="table-responsive">
       <!-- Tabla de Usuarios -->
-      <table class="table table-striped text-center" *ngIf="tablaSeleccionada === 'usuarios'">
+      <table class="table table-striped text-center bg-white" *ngIf="tablaSeleccionada === 'usuarios'">
         <thead>
           <tr>
             <th scope="col">Username</th>
@@ -254,10 +257,10 @@
           </tr>
         </tbody>
       </table>
-
-
+    </div>
+    <div class="table-responsive">
       <!-- Tabla Servicios -->
-      <table class="table table-striped text-center" *ngIf="tablaSeleccionada === 'servicios'">
+      <table class="table table-striped text-center bg-white" *ngIf="tablaSeleccionada === 'servicios'">
         <thead>
           <tr>
             <th scope="col">Nombre</th>
@@ -286,9 +289,10 @@
           </tr>
         </tbody>
       </table>
-
+    </div>
+    <div class="table-responsive">
       <!-- Tabla Resenias -->
-      <table class="table table-striped text-center" *ngIf="tablaSeleccionada === 'resenias'">
+      <table class="table table-striped text-center bg-white" *ngIf="tablaSeleccionada === 'resenias'">
         <thead>
           <tr>
             <th scope="col">Nombre Usuario</th>
@@ -313,10 +317,10 @@
           </tr>
         </tbody>
       </table>
-
+    </div>
     </div>
 
-
+  
     <!-- Tabla Reservas -->
     <div class="col-lg-12 col-md-12 col-12" *ngIf="tablaSeleccionada === 'reservas'">
       <div class="col-lg-12 col-md-12 col-12 mb-4">
@@ -376,7 +380,8 @@
         </div>
       </div>
 
-      <table class="table table-striped text-center">
+      <div class="table-responsive">
+      <table class="table table-striped text-center bg-white">
         <thead>
           <tr>
             <th scope="col">Numero De Reserva</th>
@@ -414,17 +419,11 @@
           </tr>
         </tbody>
       </table>
+      </div>
     </div>
 
 
   </div>
 
-
-
-
-
-
 </div>
 
-
-{{reseniasUsuario | json}}
